
syntax = "proto3";
package buntingkvpb;

import "gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

message Collection {
    string name = 1;
    string shard_group = 2;
}

message Shard {
    int32 id = 1;
    string shard_group = 2;
    KeyRange key_range = 3;
}

message ShardGroup {
    string name = 1;
    string table_topic = 2;
    string command_topic = 3;
}

message ShardSplit {
    int32 shard = 1;
    string shard_group = 2;
    string key = 3;
}

message ShardPipe {
    string name = 1;
    string shard_group = 2;
    int32 source_shard = 3;
    int32 dest_shard = 4;
}

message Host {
    string name = 1;
    bool is_shard_host = 2;
}

message Key {
    bytes collection = 1;
    bytes partition = 2;
    bytes key = 3;
}

message KeyValue {
    // key is the key in bytes. An empty key is not allowed.
    Key key = 1;
    // value is the value held by the key, in bytes.
    bytes value = 2;
    // index is the index in this kv's table topic partition that
    // produced this version. It can be used by observers to
    // ensure increasing versions of individual keys.
    int64 index = 3;
}
